; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-font-add.c_pdf_add_cid_system_info.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-font-add.c_pdf_add_cid_system_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CIDSystemInfo = common dso_local global i32 0, align 4
@Registry = common dso_local global i32 0, align 4
@Ordering = common dso_local global i32 0, align 4
@Supplement = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i8*, i8*, i32)* @pdf_add_cid_system_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pdf_add_cid_system_info(i32* %0, i32* %1, i32* %2, i8* %3, i8* %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32 %5, i32* %12, align 4
  %14 = load i32*, i32** %7, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = load i32, i32* @CIDSystemInfo, align 4
  %17 = call i32 @PDF_NAME(i32 %16)
  %18 = call i32* @pdf_dict_put_dict(i32* %14, i32* %15, i32 %17, i32 3)
  store i32* %18, i32** %13, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = load i32*, i32** %13, align 8
  %21 = load i32, i32* @Registry, align 4
  %22 = call i32 @PDF_NAME(i32 %21)
  %23 = load i8*, i8** %10, align 8
  %24 = load i8*, i8** %10, align 8
  %25 = call i32 @strlen(i8* %24)
  %26 = call i32 @pdf_dict_put_string(i32* %19, i32* %20, i32 %22, i8* %23, i32 %25)
  %27 = load i32*, i32** %7, align 8
  %28 = load i32*, i32** %13, align 8
  %29 = load i32, i32* @Ordering, align 4
  %30 = call i32 @PDF_NAME(i32 %29)
  %31 = load i8*, i8** %11, align 8
  %32 = load i8*, i8** %11, align 8
  %33 = call i32 @strlen(i8* %32)
  %34 = call i32 @pdf_dict_put_string(i32* %27, i32* %28, i32 %30, i8* %31, i32 %33)
  %35 = load i32*, i32** %7, align 8
  %36 = load i32*, i32** %13, align 8
  %37 = load i32, i32* @Supplement, align 4
  %38 = call i32 @PDF_NAME(i32 %37)
  %39 = load i32, i32* %12, align 4
  %40 = call i32 @pdf_dict_put_int(i32* %35, i32* %36, i32 %38, i32 %39)
  ret void
}

declare dso_local i32* @pdf_dict_put_dict(i32*, i32*, i32, i32) #1

declare dso_local i32 @PDF_NAME(i32) #1

declare dso_local i32 @pdf_dict_put_string(i32*, i32*, i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @pdf_dict_put_int(i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
